force-app/main/default/objects/ssot__EmailTemplate__dlm/fields/ssot__EmailTemplateStyleId__c.field-meta.xml
<CustomField>
    <fullName>ssot__EmailTemplateStyleId__c</fullName>
    <label>Email Template Style</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EmailTemplateStyleId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>