force-app/main/default/objects/ssot__EmailTemplate__dlm/fields/ssot__rel_1697761171723_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761171723_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EmailTemplate_Id_map_EmailTemplate_P_rel</label>
    <referenceTo>ssot__EmailTemplate__dlm</referenceTo>
    <relationshipLabel>EmailTemplate_Id_map_EmailTemplate_P_rel</relationshipLabel>
    <relationshipName>rel_1697761171723_end</relationshipName>
    <type>Lookup</type>
</CustomField>