force-app/main/default/objects/ssot__EmailTemplate__dlm/fields/ssot__rel_1697761172405_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761172405_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EmailTemplate_ParentEngagementAssetI_rel</label>
    <referenceTo>ssot__DeviceApplicationTemplate__dlm</referenceTo>
    <relationshipLabel>EmailTemplate_ParentEngagementAssetI_rel</relationshipLabel>
    <relationshipName>rel_1697761172405_end</relationshipName>
    <type>Lookup</type>
</CustomField>