force-app/main/default/objects/ssot__EmailTemplate__dlm/fields/ssot__TotalOpensQty__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalOpensQty__c</fullName>
    <label>Total Opens Quantity</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalOpensQty</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>